Added Filterfunction for Services
