# backend/app/swagger.json
@@ -39,6 +39,40 @@
     "https"
   ],
   "paths": {
+    "/service/filter": {
+      "get": {
+        "tags": [
+          "Service"
+        ],
+        "summary": "Filter all services for a Special query",
+        "operationId": "filterService",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "required": true,
+            "name": "body",
+            "in": "body",
+            "schema": { "$ref": "#/definitions/filter"}
+          }
+          ],
+        "responses": {
+          "201": {
+            "description": "Filter successful",
+            "schema": {
+              "type": "array"
+            }
+          },
+          "400": {
+            "description": "Not correctly filtered"
+          }
+        }
+      }
+    },
     "/user/register": {
       "post": {
         "tags": [
@@ -199,7 +233,7 @@
           "User"
         ],
         "summary": "Reset password",
-        "description": "Rests the password of a user, generates a new one and sends an email",
+        "description": "Resets the password of a user, generates a new one and sends an email",
         "consumes": [
           "application/json"
         ],
@@ -214,7 +248,7 @@
             "required":true,
             "schema": {
               "$ref": "#/definitions/forgotPassword"
-            },
+            }
           }
 
         ],
@@ -403,7 +437,17 @@
         "name": "Order"
       }
     },
-
+    "filter": {
+      "type": "object",
+      "properties": {
+        "query": {
+          "type": "string"
+        },
+        "searchType": {
+          "type": "string"
+        }
+      }
+    },
     "forgotPassword": {
       "type": "object",
       "properties": {
@@ -460,7 +504,8 @@
         "password": {
           "type": "string"
         }
-        }},
+        }
+    }
 
       },
   "externalDocs": {
